--- a/src/main/react/tch19-front/public/login.html
+++ b/src/main/react/tch19-front/public/login.html
@@ -4,26 +4,49 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <style>
+
+        .animate-top {
+            position: relative;
+            animation: animatedtop 0.5s ease-in-out;
+        }
+
+        @keyframes animatedtop {
+            from {
+                bottom: -20px;
+                opacity: 0
+            }
+            to {
+                bottom: 0;
+                opacity: 1
+            }
+        }
+
+
+    </style>
 
 </head>
 
 <body>
 <div>
     <form name="loginForm" method="POST" action="/perform_login">
-        <p>
-            <label>Nutzername</label>
-            <input title="username" name="username" type="text" autofocus/>
-        </p>
-        <p>
-            <label>Passwort</label>
-            <input title="password" name="password" type="password"/>
-        </p>
-        <p>
-            <button
-                    type="submit">
-                Anmelden
-            </button>
-        </p>
+        <div class="w3-card-4 w3-margin w3-padding w3-green animate-top">
+            <h2>LONV - Login</h2>
+            <p>
+                <input placeholder="Nutzername" class="w3-input" title="username" name="username" type="text" autofocus/>
+            </p>
+            <p>
+                <input placeholder="Passwort" class="w3-input w3-animate-input" title="password" name="password" type="password"/>
+            </p>
+            <p>
+                <button
+                        class="w3-blue w3-btn"
+                        type="submit">
+                    Anmelden
+                </button>
+            </p>
+        </div>
     </form>
 
 
